5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1616_2920.log
== TEST (2019-04-01 15:12:42) 
-- CODE:
a=(input(26.90))
b=(input(3.50))
c=(input(3.00))
a1=(input(800g))
-- ERROR:
File "XXXX", line 4
    a1=(input(800g))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:57) 
-- CODE:
a=(input(26.90))
b=(input(3.50))
c=(input(3.00))
a1=(input(800 gramas))
-- ERROR:
File "XXXX", line 4
    a1=(input(800 gramas))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:01) 
-- CODE:
a=(input(26.90))
b=(input(3.50))
c=(input(3.00))
a1=(input(800))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:00) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:15:25) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
-- EXECUTION TIME:
0.187445
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:59) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:16:02) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- EXECUTION TIME:
0.181433
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:00) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:16) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- EXECUTION TIME:
0.215403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:21) 
-- CODE:
a=(input(26.90))
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a1=(input(800))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:06) 
-- CODE:
a=26.90
b=(input(float(3.50)))
c=(input(3.00))
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    b1=(input(1))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:40) 
-- CODE:
a=26.90
b=3.50
c=3.00
a=(input(800))
b=(input(1))
c=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:25) 
-- CODE:
a=26.90
b=3.50
c=3.00
a=(input(800*26.90))
b=(input(1*3.50))
c=(input(1*3.00))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:35) 
-- CODE:
a=26.90
b=3.50
c=3.00
a=(input(800*26.90))
b=(input(1*3.50))
c=(input(1*3.00))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- EXECUTION TIME:
0.128131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 7, in <module>
    print(round(a,2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:34) 
-- CODE:
a=26.90
b=3.50
c=3.00
a=(input(800*26.90))
b=(input(1*3.50))
c=(input(1*3.00))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(a,2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:21) 
-- CODE:
a=26.90
b=3.50
c=3.00
a=(input(800gramas))
b=(input(1*3.50))
c=(input(1*3.00))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
File "XXXX", line 4
    a=(input(800gramas))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:52) 
-- CODE:
a=26.90
b=3.50
c=3.00
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- OUTPUT:
8001126.9
3.5
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:26:53) 
-- CODE:
a=26.90
b=3.50
c=3.00
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- EXECUTION TIME:
0.189114
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
8001126.9
3.5
3.0
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
8001126.9
3.5
3.0
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
8001126.9
3.5
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:26:54) 
-- CODE:
a=26.90
b=3.50
c=3.00
a1=(input(800))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- OUTPUT:
8001126.9
3.5
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:27:16) 
-- CODE:
a=26.90
b=3.50
c=3.00
a1=(input(800kg.))
b1=(input(1))
c1=(input(1))
print(round(a,2))
print(round(b,2))
print(round(c,2))
-- ERROR:
File "XXXX", line 4
    a1=(input(800kg.))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
